--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "request": "^2.83.0",
     "viber-bot": "^1.0.13",
     "winston": "^2.4.0",
-    "winston-console-formatter": "^0.3.1"
+    "winston-console-formatter": "^0.3.1",
+    "cloudinary": ""
   },
   "devDependencies": {
     "eslint": "^2.10.1",
