--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
   },
   "license": "MIT",
   "dependencies": {
+    "cloudinary": "",
     "dotenv": "^4.0.0",
     "express": "4.13.4",
+    "mongoose": "^5.12.7",
     "request": "^2.83.0",
     "viber-bot": "^1.0.13",
     "winston": "^2.4.0",
-    "winston-console-formatter": "^0.3.1",
-    "cloudinary": ""
+    "winston-console-formatter": "^0.3.1"
   },
   "devDependencies": {
     "eslint": "^2.10.1",
